<resources>
    <string name="app_name">Guia08 HM17-I04-001</string>



    <string name="btnCalculadora">Calculadora</string>
    <string name="btnDatos">Mis Datos</string>

    <string name="btnAC">AC</string>
    <string name="btnDEL">DEL</string>
    <string name="btnmas">+</string>
    <string name="btnmenos">-</string>

    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnx">*</string>

    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btndivision">/</string>

    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnigual">=</string>

    <string name="btn0">0</string>
    <string name="btnparentesis1">(</string>
    <string name="btnparentesis2">)</string>
    <string name="btn.">.</string>
</resources>